examples/test/testpolicy10102.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10102
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key30: value13
      key12: value1
      key13: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value6
          key14: value20
          key46: value16
